--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title>საახალწლო საიტი</title>
 </head>
 
@@ -13,8 +13,24 @@
     <div id="tree">
         <img src="images/Christmas_tree.svg" alt="">
     </div>
-    <!-- <audio src="audio/church.mp3"></audio> -->
-    <audio src="audio/music.mp3"></audio>
+    <audio src="audio/12_Days_of_Christmas_Instrumental.mp3"></audio>
+    <audio src="audio/Canon_and_Variation.mp3"></audio>
+    <audio src="audio/Carol_Of_The_Bells.mp3"></audio>
+    <audio src="audio/Christmas_Homecoming.mp3"></audio>
+    <audio src="audio/We_Wish_You_a_Merry_Christmas_Vocals.mp3"></audio>
+    <audio src="audio/Dance_Of_The_Sugar_Plum_Fairies_by_Tchaikovsky.mp3"></audio>
+    <audio src="audio/Deck_the_Halls_B.mp3"></audio>
+    <audio src="audio/Hip_Hop_Christmas.mp3"></audio>
+    <audio src="audio/Jingle_Bells.mp3"></audio>
+    <audio src="audio/Dance_of_the_Sugar_Plum_Fairy.mp3"></audio>
+    <audio src="audio/Jolly_Old_St_Nicholas_Instrumental.mp3"></audio>
+    <audio src="audio/Joy_to_the_World_Vocals.mp3"></audio>
+    <audio src="audio/Noel.mp3"></audio>
+    <audio src="audio/O_Christmas_Tree_Instrumental.mp3"></audio>
+    <audio src="audio/Prizefighter.mp3"></audio>
+    <audio src="audio/Jingle_Bells_7.mp3"></audio>
+    <audio src="audio/Waltz_of_the_Flowers_by_Tchaikovsky.mp3"></audio>
+    <audio src="audio/We_Wish_You_A_Merry_Xmas.mp3"></audio>
     <script src="scripts/main.js"></script>
 </body>
 
